2015-09-15  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/projects/project_report.php: Visual improvements
	to the task report item.

2015-09-15  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_agenda.php,
	  include/functions_calendar.php,
	  include/functions_db.php,
	  include/js/agenda.js,
	  operation/agenda/entry.php,
	  operation/side_menu.php: Improvements, fixes and other
	changes to introduce a new feature which limits the agenda
	events mail sending and improves privacy.
	
2015-09-15  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/styles/integria_tip.css: Improved the position
	of the tip image.

2015-09-15  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/mr/29.sql,
	  integria_db.sql,
	  integria_dbdata.sql: Added the new table 'tagenda_groups'.
	
2015-09-15  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* images/input_delete.white.png: Added a missing image.

2015-09-14  Vanessa Gil <vanessa.gil@artica.es>
	
	* functions_api.php: Modified api_ovo_manager.

	* integria_db.sql
	  integria_dbdata.sql
	  godmode/setup/setup_crm.php
	  include/functions_config.php
	  include/ajax/crm.php
	  operation/invoices/invoices.php: Added ids generator
	to create invoices.

	* extras/mr/28.sql: Added file

	* include/languages/cs.mo
	  include/languages/cs.po
	  include/languages/de.mo
	  include/languages/de.po
	  include/languages/en_GB.mo
	  include/languages/en_GB.po
	  include/languages/es.mo
	  include/languages/es.po
	  include/languages/fr.po
	  include/languages/fr.mo
	  include/languages/pl.po
	  include/languages/pl.mo
	  include/languages/ru.po
	  include/languages/ru.mo
	  include/languages/zh_CN.mo
	  include/languages/zh_CN.po
	  include/languages/zh_TN.mo
	  include/languages/zh_TN.po
	  include/languages/index.pot: Updated translations. 

2015-09-14  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/incidents/incident_tracking.php,